# efqt-hello-world

./: CMakeLists.txt  LICENSE  MainWindow.eft  README.md  efqt-hello-world.pro  main.cpp
